# thermal-eye

./: .gitguardian.yaml  .gitignore  README.md
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: assets.py  auth.py  health.py  inspections.py  orgs.py  reports.py  router.py
apps/api/app/core/: config.py  database.py  enums.py  logging.py  middleware.py  ratelimit.py  security.py  utils.py
apps/api/app/models/: __init__.py  alert.py  asset.py  audit.py  base.py  inspection.py  organization.py  user.py
apps/api/app/schemas/: asset.py  auth.py  common.py  inspection.py  org.py  user.py
apps/api/app/scripts/: init_db.py
apps/api/app/services/: alerts.py  analysis.py  audit.py  auth.py  email.py  geo.py  openrouter.py  predictive.py  reports.py  storage.py  weather.py
apps/api/scripts/: dump_ddl.py  smoke.py  vision_test.py
apps/web/: .env.example  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/app/(app)/: layout.tsx
apps/web/app/forgot-password/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/pricing/: page.tsx
apps/web/app/register/: page.tsx
apps/web/app/reset-password/: page.tsx
apps/web/components/: BrandLogo.tsx  MapView.tsx  PasswordInput.tsx  ThemeToggle.tsx
apps/web/lib/: api.ts  auth.tsx  theme.tsx  types.ts  utils.ts
docs/: ARCHITECTURE.md  DEVELOPMENT.md
infra/: DEPLOY.md  render.yaml
infra/supabase/: PROJECT.md  hardening.sql  schema.sql
(+13 files in other folders)
